Fixes and code coverage